<resources>
    <string name="app_name">DoMeFavor</string>

    <!--sign in-->
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="signed_in">Signed in</string>
    <string name="signing_in">Signing in…</string>
    <string name="signed_out">Signed out</string>
    <string name="signed_in_err">"Error: please check logs."</string>
    <string name="loading">Loading…</string>
    <string name="title_text">Do Me a Favor</string>


    <!-- sign out-->
    <string name="main_signout"></string>

    <!-- profile -->
    <string name="profile_photo_title">User photo:</string>
    <string name="profile_change_button">Change</string>
    <string name="profile_name_title">Name: </string>
    <string name="profile_email_title">Email: </string>
    <string name="profile_name_credit">Credit: </string>

    <!-- fragment new task-->
    <string name="task_name">Task Name</string>
    <string name="task_time">Task Time</string>
    <string name="task_detail">Task Details</string>
    <string name="task_address">Task Address</string>
    <string name="task_name_hint">Briefly tell us about your task</string>
    <string name="task_detail_hint">More Details about your task</string>
    <string name="task_address_hint">Task Address</string>
    <string name="button_title_post">Post</string>
    <string name="button_title_reset">Reset</string>

    <!--fragment task list-->
    <string name="button_title_refresh">Refresh</string>
    <string name="title_activity_maps">Map</string>
    <string name="header_task_person_ID"><b>Person ID: </b></string>
    <string name="header_task_name"><b>Task: </b></string>
    <string name="header_task_detail"><b>Detail: </b></string>
    <string name="header_task_time"><b>Time: </b></string>
    <string name="header_task_offer"><b>Offer($): </b></string>
    <string name="header_locatioin"><b>Distance(km): </b></string>
    <string name="dialog_bid_title">Reward you need($)</string>
    <string name="dialog_button_ok">OK</string>
    <string name="dialog_button_cancel">CANCEL</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="place_details">
    <![CDATA[
        <b>%1$s</b>
        <br/>
        Address: %2$s
    ]]>
    </string>
</resources>
