<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/task_name"/>

        <EditText
            android:id="@+id/editTaskName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:hint="@string/task_name_hint"
            android:inputType="text"
            android:singleLine="true">
        </EditText>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/task_detail"/>

        <EditText
            android:id="@+id/editTaskDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:hint="@string/task_detail_hint"
            android:inputType="textMultiLine"
            android:scrollbars="vertical"
            android:lines="8">
        </EditText>

        <Button
            android:id="@+id/editTaskTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/task_time"
            android:background="@android:color/transparent"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/task_address" />

        <EditText
            android:id="@+id/editTaskAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/task_address_hint"
            android:layout_margin="5dp"
            android:inputType="text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/postButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:text="@string/button_title_post"/>

            <Button
                android:id="@+id/resetButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:text="@string/button_title_reset"/>
        </LinearLayout>
    </LinearLayout>

</ScrollView>