<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:segmentedgroup="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/profile_photo_title"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false" >

            <ImageView
                android:id="@+id/imageProfile"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:focusable="true"
                android:focusableInTouchMode="true" >
                <requestFocus />
            </ImageView>

            <Button
                android:id="@+id/btnChangePhoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:textSize="15dp"
                android:onClick="onChangePhotoClicked"
                android:text="@string/profile_change_button" >
            </Button>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:text="@string/profile_name_title"/>

            <TextView
                android:id="@+id/profile_name"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:text="@string/profile_email_title"/>

            <TextView
                android:id="@+id/profile_email"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"/>
        </LinearLayout>

        <com.marvinlabs.widget.floatinglabel.edittext.FloatingLabelEditText
            android:id="@+id/edit_text2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            app:flw_labelText="Age: " />

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal">
            <TextView android:layout_height="match_parent"
                android:layout_width="100dp"
                android:text="Gender: "/>
            <info.hoang8f.android.segmented.SegmentedGroup
                android:id="@+id/segment"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="200dp"
                android:layout_margin="10dp"
                android:orientation="vertical"
                segmentedgroup:sc_tint_color="#727272"
                segmentedgroup:sc_border_width="1dp"
                segmentedgroup:sc_corner_radius="10dp">

                <RadioButton
                    android:id="@+id/segmentbutton1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Male"
                    style="@style/RadioButton" />

                <RadioButton
                    android:id="@+id/segmentbutton2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Female"
                    style="@style/RadioButton" />

                <RadioButton
                    android:id="@+id/segmentbutton3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Unknown"
                    style="@style/RadioButton" />
            </info.hoang8f.android.segmented.SegmentedGroup>
        </LinearLayout>
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal">
            <Button
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:gravity="center_horizontal"
                android:layout_marginLeft="100dp"
                android:layout_marginRight="100dp"
                android:id="@+id/saveprofile"
                android:text="Save">
            </Button>
        </LinearLayout>
</LinearLayout>
